--- a/users.properties
+++ b/users.properties
@@ -1,2 +1,2 @@
-admin=password,Operator, Maintainer, Deployer, Auditor, Administrator, SuperUser
-dev=password,Operator, Maintainer, Deployer
+admin=admin,Operator, Maintainer, Deployer, Auditor, Administrator, SuperUser
+dev=admin,Operator, Maintainer, Deployer
